Correct navigation links

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,6 @@
   - title: "Team"
     url: index.html#team
   - title: "Downloads"
-    url: https://hex.pm/packages/ethereum
+    url: https://hex.pm/packages/mana
   - title: "GitHub"
     url: https://github.com/mana-ethereum/mana
